# remotodojo

./: .flake8  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  setup.cfg
apps/accounts/: admin.py  forms.py  models.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py
apps/accounts/templates/accounts/: login.html  register.html
apps/accounts/tests/: factories.py  mixins.py  test_login.py  test_registration.py
apps/core/: views.py
apps/posts/: admin.py  forms.py  models.py  urls.py  views.py
apps/posts/migrations/: 0001_initial.py  0002_alter_post_options.py  0003_post_content_changed.py  0004_alter_post_options.py
apps/posts/templates/posts/: create.html  list.html  my_posts.html  post_confirm_delete.html  update.html
apps/posts/tests/: factories.py  mixins.py  test_post_create.py  test_post_delete.py  test_post_list.py  test_post_toggle.py  test_post_update.py  test_post_user_list.py
remotodojo/: asgi.py  urls.py  wsgi.py
remotodojo/settings/: dev.py  production.py
remotodojo/templates/: base.html
server/: django_devserver.sh  server.sh
