[tool.black]
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | .*/migrations/.*\.py
)
'''

[tool.poetry]
name = "Remotodojo"
version = "0.1.0"
description = ""
authors = ["Ronil Rufo <ronil.rufo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.9"
psycopg2-binary = "^2.8"
gunicorn = {version = "^20.1.0", optional = true}
django-model-utils = "^4.2.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.14.0"
flake8 = "^3.9.2"
isort = "^5.9.3"
black = "^21.7b0"
bandit = "^1.7.0"
coverage = "^6.2"
factory-boy = "^3.2.1"
pytest-django = "^4.5.1"
Faker = "^10.0.0"

[tool.poetry.extras]
prod = ["gunicorn"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
